<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addFavoriteMenuItem"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/AddFavorite"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/removeFavoriteMenuItem"
        android:icon="@drawable/ic_favorite"
        android:title="@string/RemoveFavorite"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/addTeachableTagMenuItem"
        android:icon="@drawable/ic_people_border"
        android:title="@string/AddTeachableTag"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/removeTeachableTagMenuItem"
        android:icon="@drawable/ic_people"
        android:title="@string/RemoveTeachableTag"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/refreshMenuItem"
        android:icon="@drawable/ic_refresh"
        android:title="@string/RefreshTag"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/emailMenuItem"
        android:icon="@drawable/ic_email"
        android:title="@string/EmailTag"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/smsMenuItem"
        android:icon="@drawable/ic_sms"
        android:title="@string/SmsTag"
        app:showAsAction="ifRoom">
    </item>

</menu>