<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/browseButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/BrowseTags"
        android:textSize="24sp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/teachableButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/TeachableTags"
        android:textSize="24sp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/randomTagButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:text="@string/RandomTag"
        android:textSize="24sp"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:clickable="false"
        android:longClickable="false"
        android:text="@string/Favorites"
        android:textSize="24sp"
        android:textStyle="bold">
    </TextView>

</LinearLayout>