<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent" android:orientation="vertical" android:layout_height="fill_parent">
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/teachingVideoRow"
		android:layout_weight="0" android:orientation="vertical">
		<TextView android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:text="@string/TeachingVideo"
			android:id="@+id/textView2" android:textSize="20dp"></TextView>
			<depollsoft.tagmaster.TeachingVideoDisplay android:id="@+id/teachingVideoDisplay" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/linearLayout2" android:orientation="vertical"
		android:layout_weight="1" android:layout_height="wrap_content">
			<TextView android:layout_height="wrap_content"
				android:text="@string/UserSubmissions"
				android:textSize="20dp" android:id="@+id/textView1" android:layout_width="fill_parent"></TextView>
			<TextView android:layout_height="wrap_content"
				android:text="@string/NoVideos"
				android:id="@+id/sorryTextView" android:layout_width="fill_parent" android:textSize="12dp"></TextView>
			<ListView android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/videoList" android:layout_weight="1" android:cacheColorHint="#00000000"></ListView>
	</LinearLayout>
</LinearLayout>
