<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerInside"
        android:src="@drawable/screenbackground" >
    </ImageView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/Settings"
            android:textSize="24dp"
            android:textStyle="bold" >
        </TextView>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="@string/CurrentCacheSize"
                        android:textSize="12dp"
                        android:textStyle="bold" >
                    </TextView>

                    <TextView
                        android:id="@+id/cacheSizeDisplay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="12dp" >
                    </TextView>
                </TableRow>

                <Button
                    android:id="@+id/clearCacheButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ClearCache" >
                </Button>

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/Favorites"
                    android:textSize="20dp"
                    android:textStyle="bold" >
                </TextView>

                <Button
                    android:id="@+id/clearFavoritesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ClearFavorites" >
                </Button>

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/TeachableTags"
                    android:textSize="20dp"
                    android:textStyle="bold" >
                </TextView>

                <Button
                    android:id="@+id/clearTeachableTags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ClearTeachableTags" >
                </Button>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/RandomTagSettings"
                    android:textSize="20dp"
                    android:textStyle="bold" >
                </TextView>

                <TableRow
                    android:id="@+id/TableRow01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="8dp"
                        android:text="@string/MinimumRating"
                        android:textSize="12dp"
                        android:textStyle="bold" >
                    </TextView>

                    <Spinner
                        android:id="@+id/minimumRatingSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:entries="@array/MinRatingChoices" >
                    </Spinner>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="8dp"
                        android:text="@string/MinimumDownloads"
                        android:textSize="12dp"
                        android:textStyle="bold" >
                    </TextView>

                    <Spinner
                        android:id="@+id/minimumDownloadSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:entries="@array/MinDownloadChoices" >
                    </Spinner>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/sheetMusicCheckText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="8dp"
                        android:text="@string/SheetMusicCheck"
                        android:textSize="12dp"
                        android:textStyle="bold" >
                    </TextView>

                    <Spinner
                        android:id="@+id/sheetMusicSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:entries="@array/SheetMusicChoices" >
                    </Spinner>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="8dp"
                        android:text="@string/LearningTracks"
                        android:textSize="12dp"
                        android:textStyle="bold" >
                    </TextView>

                    <Spinner
                        android:id="@+id/learningTracksSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:entries="@array/LearningTracksChoices" >
                    </Spinner>
                </TableRow>
            </TableLayout>
        </ScrollView>
    </LinearLayout>

</merge>